--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=easyclaim-backend
 sonar.projectName=EasyClaim Backend
 sonar.projectVersion=1.0
 sonar.sources=src
+sonar.java.binaries=target/classes
