--- a/deploy-playbook.yml
+++ b/deploy-playbook.yml
@@ -2,17 +2,11 @@
 - name: Create pods using deployment 
   hosts: master
   tasks:
-  - name: Show current directory
-    command: pwd
-
-  - name: show current user
-    command: id
-
-  - name: create a deployment
-    copy: src="./k8s-deployment.yml" dest="k8s-deployment.yml"
+  #- name: create a deployment
+  #  copy: src="./k8s-deployment.yml" dest="k8s-deployment.yml"
     
   - name: create a deployment
     command: kubectl apply -f k8s-deployment.yml
  
   - name: update deployment with new pods if image updated in docker hub
-    command: kubectl rollout restart deployment.v1.apps/easyclaim-backend
+    command: kubectl rollout restart deployment.v1.apps/easyclaim-backend -n capstone
