--- a/deploy-playbook.yml
+++ b/deploy-playbook.yml
@@ -1,9 +1,12 @@
 ---
 - name: Create pods using deployment 
   hosts: master
-  tasks:    
+  tasks:
+  - name: copy deployment file
+    copy: src="./backend-deployment.yml" dest="backend-deployment.yml"
+
   - name: create a deployment
-    command: kubectl apply -f k8s-deployment.yml
+    command: kubectl apply -f backend-deployment.yml
  
   - name: update deployment with new pods if image updated in docker hub
     command: kubectl rollout restart deployment.v1.apps/easyclaim-backend -n capstone
