--- a/backend-deployment.yml
+++ b/backend-deployment.yml
@@ -37,6 +37,7 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
+      nodePort: 32002
   selector:
     name: easyclaim-backend-pod
-  type: ClusterIP
+  type: NodePort
